@@ -1,3 +1,4 @@
+- STRM building - add force parameter (to force overwrite)
 - STRM building - add 'resolution' parameter to append resolution to STRM filename
 - make correction for checking if STRM file exists already
 - workaround issue - buildstrm folders not working #40
